[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/GamePause.gd" type="Script" id=1]
[ext_resource path="res://Assets/SFX/UI/Resume.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 3 )

[node name="GamePause" type="CanvasLayer"]

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -76.0
margin_right = 120.0
margin_bottom = 76.0
script = ExtResource( 1 )

[node name="resumemusic" type="AudioStreamPlayer" parent="Options"]
stream = ExtResource( 2 )

[node name="Resume" type="Button" parent="Options"]
margin_right = 240.0
margin_bottom = 35.0
custom_colors/font_color = Color( 1, 0.282353, 0.388235, 1 )
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="Menu" type="Button" parent="Options"]
margin_top = 39.0
margin_right = 240.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 0.282353, 0.388235, 1 )
custom_fonts/font = SubResource( 2 )
text = "Menu"

[node name="Options" type="Button" parent="Options"]
margin_top = 78.0
margin_right = 240.0
margin_bottom = 113.0
custom_colors/font_color = Color( 1, 0.282353, 0.388235, 1 )
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="Quit" type="Button" parent="Options"]
margin_top = 117.0
margin_right = 240.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 0.282353, 0.388235, 1 )
custom_fonts/font = SubResource( 4 )
text = "Quit"

[connection signal="pressed" from="Options/Resume" to="Options" method="_on_Resume_pressed"]
[connection signal="pressed" from="Options/Menu" to="Options" method="_on_Menu_pressed"]
[connection signal="pressed" from="Options/Options" to="Options" method="_on_Options_pressed"]
[connection signal="pressed" from="Options/Quit" to="Options" method="_on_Quit_pressed"]
